--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,22 @@
     <title>Contact Me</title>
   </head>
   <body>
-    <ol>
+    <ul>
       <li><a href="https://www.linkedin.com/in/shivam-bist-291a76114/" target="_blank">My Linkden profile</a></li>
-      <li>My Email ID:<a href=" mailto:sb1kaka@gmail.com?subject=feedback"> sb1kaka@gmail.com </a></li>
-      <li>MObile Number: 8126411243</li>
-      <form class="" action="mailto:sb1kaka@gmail.com?subject=feedback" method="post">
-        <label>Your name</label>
-        <input type="text" name="" value="">
-        <input type="submit" name="" value="Submit"><br />
-        <input type="file" name="" value=""><br>
-        <input type="date" name="" value=""><br>
-        <input type="radio" name="" value="Yes/No"><br>
-        <input type="range" name="" value="Pick"><br>
+      <li>Mobile Number: 8126411243</li>
+    </ul>
+    <hr />
+      <form class="" action="mailto:sb1kaka@gmail.com?subject=feedback" method="post" enctype="text/plain">
+        <label>Your name:</label><br>
+        <input type="text" name="Yourname" value=""><br>
+        <label>Your Email:</label><br>
+        <input type="email" name="YourEmail" value=""><br>
+        <label for="">Your message:</label><br>
+        <textarea name="Yourmessage" rows="5" cols="30"></textarea><br>
+        <input type="submit" name="" value="Submit">
+
       </form>
-    </ol>
+
   </body>
 </html>
+
